fix transitions for dark mode switch on safari

--- a/src/components/DarkModeSwitch/DarkModeSwitch.module.css
+++ b/src/components/DarkModeSwitch/DarkModeSwitch.module.css
@@ -2,7 +2,7 @@
   top: 22px;
   right: 36px;
   display: block;
-  transition: background-color 0.3s ease, border 0.3s ease, bos-shadow 0.3s ease;
+  transition: background-color 0.3s ease, border 0.3s ease, box-shadow 0.3s ease;
   position: absolute;
   width: 75px;
   height: 40px;
@@ -35,7 +35,7 @@
 }
 
 .circle {
-  transition: 0.3s all ease;
+  transition: 0.3s margin ease;
   display: block;
   height: 32.5px;
   width: 32.5px;
@@ -58,6 +58,7 @@
   font-size: 18px;
   width: 100%;
   height: 100%;
+  transition: none;
 }
 
 .moon {
@@ -70,6 +71,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  transition: none;
 }
 
 .sunWrapper {
@@ -79,6 +81,7 @@
   font-size: 21px;
   width: 100%;
   height: 100%;
+  transition: none;
 }
 
 .sun {
@@ -91,4 +94,5 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  transition: none;
 }
